dream-big-section commit

--- a/index.html
+++ b/index.html
@@ -23,5 +23,19 @@
             <img src="./img/my-bg (1).png" alt="asiful image" width="500px" height="500px">
         </div>
     </section>
+
+    <section class="dream-big-section">
+        <div id="second-img">
+            <img src="./img/my-bg2.png" alt="asiful image" width="500px" height="500px">
+        </div>
+        <div class="dream-big">
+            <h1>Dream Big</h1>
+            <h3>   Become a web <span class="text-color">developer</span></h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.
+            </p>
+            <a class="link-button" target="-blank" href="#">DOWNLOAD RESUME..!</a>
+
+        </div>
+    </section>
 </body>
 </html>
