--- a/index.html
+++ b/index.html
@@ -37,5 +37,21 @@
 
         </div>
     </section>
+
+    <section class="exprience-area">
+        <h1>Exprience</h1>
+        <div class="section-item">
+            <div class="exerience-item full-stack">
+                <h1 id="text-size">Full Stack Web Developer</h1>
+                <h3 id="font-orange">2022-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div class="exerience-item baby-web">
+                <h1 id="text-size">Baby Web Developer</h1>
+                <h3 id="font-orange">2021-2022 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
