footer-section commit

--- a/index.html
+++ b/index.html
@@ -53,5 +53,9 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <p>© Asiful Islam 2021, Web Design & Development.</p>
+    </footer>
 </body>
 </html>
